[package]
name = "positioned-io2"
version = "0.3.4"
authors = [
    "Dave Vasilevsky <dave@vasilevsky.ca>",
    "Niklas Fiekas <niklas.fiekas@backscattering.de>",
    "Sebastian Urban <surban@surban.net>",
]
description = "Reading and writing at an offset"
keywords = ["read", "offset", "pread", "pwrite", "endian"]
categories = ["filesystem", "os", "no-std"]
license = "MIT"
repository = "https://github.com/surban/positioned-io2"
readme = "README.md"

[features]
default = ["byteorder", "std"]
std = ["acid_io/std"]

[dependencies]
byteorder = { version = "1.4", optional = true }
acid_io = { version = "0.1.0", default-features = false, features = ["alloc"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "basetsd",
    "minwindef",
    "handleapi",
    "fileapi",
    "sysinfoapi",
    "memoryapi",
    "winnt",
] }

[dev-dependencies]
quickcheck = "0.9"
rand = "0.7"
tempfile = "3.0"
